<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/userToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:layout_margin="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userToolbar"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/user_pageTitle"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/userUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/ubuntu"
            android:inputType="text"
            android:hint="@string/user_txtUserName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/ubuntu"
            android:inputType="textEmailAddress"
            android:hint="@string/user_txtEmail"
            android:padding="15dp" />

        <EditText
            android:id="@+id/userPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/user_txtPassword"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/userSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/ubuntu"
            android:text="@string/user_btnSave"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/userSaveProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:indeterminateTint="#FFFFFF"
        android:visibility="gone"/>
</RelativeLayout>