<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.UserLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="80dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:src="@drawable/logo"
                android:tint="#FFFFFF" />

            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:inputType="textEmailAddress"
                android:hint="@string/login_txtEmail"
                android:padding="15dp" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/login_txtPassword"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/ubuntu"
                android:text="@string/login_btnLogin"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loginRegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:text="@string/login_btnRegister"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimaryDark"
        android:indeterminateTint="#FFFFFF"
        android:padding="10dp"
        android:visibility="gone" />

</RelativeLayout>