<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.ObjectRegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registerObjectsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:layout_margin="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerObjectsToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/registerObjectPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/objectRegister_pageTitle"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/registerObjectId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:hint="Código do Objeto"
                android:padding="10dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/registerObjectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:inputType="text"
                android:hint="@string/objectRegister_txtTitle."
                android:padding="10dp" />

            <EditText
                android:id="@+id/registerDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:inputType="text"
                android:hint="@string/objectRegister_txtDateOccurred"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/spinnerSituation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:fontFamily="@font/ubuntu" />

            <Spinner
                android:id="@+id/spinnerClassification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:fontFamily="@font/ubuntu" />

            <ImageView
                android:id="@+id/registerObjectImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/registerObjectSelectImageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/ubuntu"
                android:text="@string/objectRegister_btnSelectImage"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/registerObjectDescription"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:layout_height="120dp"
                android:gravity="top"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/objectRegister_txtDescription"
                android:isScrollContainer="true"
                android:padding="10dp" />

            <Button
                android:id="@+id/registerObjectSaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/ubuntu"
                android:text="@string/objectRegister_btnSave"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/registerObjectsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:indeterminateTint="#FFFFFF"
        android:visibility="gone"/>

</RelativeLayout>